# SL-GPS

./: .dockerignore  .gitignore  .hfignore  DOCKER_BUILD_GUIDE.md  Dockerfile  Dockerfile.slim  FRONTEND_QUICKSTART.md  GET_STARTED.md  HF_SPACE_LOGGING_FIX.md  HF_SPACE_README.md  HF_SPACE_app.py  HF_SPACE_requirements.txt  IMPLEMENTATION_SUMMARY.md  README.md  app.py  app_minimal.py  flux_graph  hf_space_README.md  main.py  make_data.py  mech_train.py  mkdocs.yml  packages.txt  pyproject.toml  requirements.txt  utils.py
.github/: README.md  copilot-instructions.md
.github/workflows/: deploy-docs.yml
archive/: v1README.md
docs/: api.md  code_structure.md  frontend.md  index.md  setup.md  workflow.md
frontend/: README.md  __init__.py  __main__.py  app.py
generated_data/: always_spec_nums.csv  mechanism.cti  never_spec_nums.csv  var_spec_nums.csv
generated_data_test/: data.csv  species.csv
generated_data_test/model/: model.h5
generated_data_test/scaler/: model.pkl
site/: 404.html  index.html
site/api/: index.html
site/code_structure/: index.html
site/frontend/: index.html
site/search/: search_index.json
site/setup/: index.html
site/workflow/: index.html
src/slgps/: MILD_model_c_100_a_0.001_n_16.h5  README.md  README_ForLalit  SL_GPS.py  display_sim_data.py  ign.npz  (+29 more)
src/slgps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test_real_data2/: always_spec_nums.csv  data.csv  never_spec_nums.csv  species.csv  var_spec_nums.csv
tests/: converth5ToPb.ipynb  converth5ToPb.ipynb.ipynb  test_sandiaFlameD.py  test_slgps.py
validation/: .gitignore
(+89 files in other folders)
